fix(ui): remove overflow for sidenav close button

--- a/src/content/styles/modules/_app-menu.scss
+++ b/src/content/styles/modules/_app-menu.scss
@@ -62,6 +62,10 @@
                 margin: 10px;
                 top:0;
                 right:0;
+                
+                .md-ripple-container {
+                    overflow: hidden;
+                }
             }
 
             .app-logotype {
